--- a/src/components/Meme/meme.css
+++ b/src/components/Meme/meme.css
@@ -6,9 +6,6 @@ body {
     font-family: "Karla", sans-serif;
     margin: 0;
 }
-main{
-    padding: 36px;
-}
 
 .top--head{
     background: linear-gradient(90deg, #672280 1.18%, #A626D3 100%);
@@ -29,22 +26,31 @@ main{
     height: 120%;
     margin-right: 6px;
 }
-
-
-
+main{
+    padding: 90px;
+}
 .body--full{
     display:grid;
     grid-template: 40px 40px / 1fr 1fr;
     gap: 17px;
 }
-.input--fields{
-   border-radius: 5px;
-
+.input--1{
+    border: 1px solid D5D4D8;
+    font-family: "Karla", sans-serif;
+    border-radius: 5px;
 }
-
-
 .body--full > button {
     background: linear-gradient(90deg, #672280 1.18%, #A626D3 100%);
     grid-column: 1 / -1;
+    border: 1px solid D5D4D8;
+    font-family: "Karla", sans-serif;
+    border-radius: 5px;
+    color: #FFFFFF;
+    cursor: pointer;
+    border: none;
 
+}
+.an--image{
+    /* grid */
+    max-width: fit-content;
 }
