--- a/src/components/Meme/meme.css
+++ b/src/components/Meme/meme.css
@@ -38,6 +38,7 @@ main{
     border: 1px solid D5D4D8;
     font-family: "Karla", sans-serif;
     border-radius: 5px;
+    text-indent: 7px;
 }
 .body--full > button {
     background: linear-gradient(90deg, #672280 1.18%, #A626D3 100%);
