--- a/src/components/jobs/jobs.css
+++ b/src/components/jobs/jobs.css
@@ -1,4 +1,4 @@
-* {
+/* * {
     box-sizing: border-box;
 }
 
@@ -25,8 +25,6 @@ body {
     border-radius: 5px;
     border: 1px solid  D5D4D8;
     border-radius: 11px;
-    /* box-shadow: 0px 6px 12px -6px rgba(255, 255, 255, 0.12),
-     0px 8px 24px -4px rgba(255, 255, 255, 0.08); */
 }
 .input--2 {
     background-color: #009490;
@@ -46,4 +44,4 @@ body {
     height: 0px;
     border: 1px solid #FFFFFF;
 
-  }
+  } */
